Sam-master-2-three-col-card-Events-2nd: fixed bottom row card sizes and found missing card

--- a/index.html
+++ b/index.html
@@ -545,12 +545,28 @@
             </div>
           </div>
           <div class="card-deck g-mx-20 g-my-20">
+            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
+              <div class="card-body">
+                <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
+                <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
+                </p>
+              </div>
+            </div>
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017serverless-min.jpg" alt="2017 Serverless Conference">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></h4>
                 <p class="card-text">Two of our employees learned a lot while taking in some of the sights at Serverless Conf in Austin, Texas!</p>
               </div>
             </div>
+            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-holiday-party-min.jpg" alt="2016 Holiday Party">
+              <div class="card-body">
+                <h4 class="card-title"> <a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></h4>
+                <p class="card-text">Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-deck g-mx-20 g-my-20">
+
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-family-picnic-min.jpg" alt="2016 Family Picnic">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank" rel="noopener">2016 Family Picnic</a></h4>
@@ -563,41 +579,31 @@
                 <p class="card-text">Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
               </div>
             </div>
-
-          </div>
-          <!-- Row -->
-          <div class="card-deck g-mx-20 g-my-20">
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></h4>
                 <p class="card-text">The force is strong with us as we watched Rogue One at the Alamo Drafthouse.</p>
               </div>
             </div>
+          </div>
+          <!-- Row -->
+          <div class="card-deck justify-content-center g-mx-20 g-my-20">
+
             <!-- Item -->
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
+            <div class="card mw-30"> <img class="card-img-top" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank" rel="noopener">2015 Holiday Party</a></h4>
                 <p class="card-text">Employees and their loved ones enjoyed a night out at Salamander Resort and Spa to celebrate the holiday season.</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/starwars-trip-min.jpg" alt="Star Wars: The Force Awakens">
+            <div class="card mw-30"> <img class="card-img-top" src="./assets/custom/img/events/starwars-trip-min.jpg" alt="Star Wars: The Force Awakens">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank" rel="noopener">Star Wars: The Force Awakens</a></h4>
                 <p class="card-text">Several employees viewed the latest Star Wars movie at the Udvar Hazy IMAX theater.</p>
               </div>
             </div>
+            <div class="card card-offset"></div>
             <!-- Item End -->
-          </div>
-          <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
-              <div class="card-body">
-                <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
-                <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
-                </p>
-              </div>
-            </div>
-            <div class="card card-offset"></div>
-            <div class="card card-offset"></div>
           </div>
         </div>
         <div class="text-center">
