31-internship-page-overview: about section with logos

--- a/intern.html
+++ b/intern.html
@@ -115,14 +115,30 @@
       </section>
       <!-- END REVOLUTION SLIDER -->
       <!-- Benefits Section Content -->
-      <section id="overview" class="g-py-100">
-        <div class="container text-center g-max-width-750 g-mb-70">
+      <section id="overview" class="g-py-20">
+        <div class="container text-center g-max-width-750 g-mb-20">
           <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">About</h2> </div>
           <p class="mb-0">We are looking for highly motivated and bright students to continue building the foundation of our summer intern program. Guided by our team of software professionals, and previous Interns, you will apply cutting edge software development tools
             and practices to a real software product that you will build from the ground up. Some of the technologies considered for the project are Vue/Angular/React, Node/Express, and Bootstrap/Google Material Design. Throughout the program, Interns
             will use many software engineering best practices such as agile/scrum, pair programming, automated testing, and test-driven development. If you are eager to hone the skills learned at Virginia Tech and want to work on a real-world problem,
             from concept to delivery, while working for an established company of software professionals, then please consider applying for a summer internship with Case Consulting!</p>
+        </div>
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="d-flex align-items-center logos-moible">
+              <img class="logos" src="./assets/custom/img/logos/Atom.png" />
+            </div>
+            <div class="offset-1 d-flex align-items-center logos-moible">
+              <img class="logos" src="./assets/custom/img/logos/Javascript.png" />
+            </div>
+            <div class="offset-1 d-flex align-items-center logos-moible">
+              <img class="logos" src="./assets/custom/img/logos/NodeJS.png" />
+            </div>
+            <div class="offset-1 d-flex align-items-center logos-moible">
+              <img class="logos" src="./assets/custom/img/logos/Vue.png" />
+            </div>
+          </div>
         </div>
       </section>
       <!-- End Section Content -->
