33-requirements: Requirements in bulleted list

--- a/intern.html
+++ b/intern.html
@@ -147,15 +147,64 @@
         <div class="container-fluid">
           <div class="container text-center g-max-width-750 g-mb-20 g-pt-70">
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Requirements</h2> </div>
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white ">Requirements</h2> </div>
           </div>
-          <div class="container g-pb-30 g-color-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sapien pellentesque habitant morbi tristique. Sed turpis tincidunt id aliquet. Amet mauris commodo quis imperdiet massa
-            tincidunt nunc. Quis viverra nibh cras pulvinar mattis. Pretium lectus quam id leo. Mauris a diam maecenas sed enim ut. Semper risus in hendrerit gravida rutrum. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. In massa
-            tempor nec feugiat nisl. Nunc consequat interdum varius sit amet mattis vulputate enim nulla. Pellentesque nec nam aliquam sem et tortor consequat id. Orci dapibus ultrices in iaculis nunc sed augue lacus. Elit sed vulputate mi sit amet mauris.
-            Senectus et netus et malesuada fames ac turpis egestas. Aliquam eleifend mi in nulla posuere. Leo duis ut diam quam nulla. Sagittis orci a scelerisque purus semper eget duis at. Rutrum quisque non tellus orci ac. Viverra ipsum nunc aliquet
-            bibendum enim. Lacus suspendisse faucibus interdum posuere lorem ipsum. Accumsan tortor posuere ac ut. Cras adipiscing enim eu turpis egestas pretium aenean. Vitae proin sagittis nisl rhoncus mattis rhoncus. Mi bibendum neque egestas congue
-            quisque egestas diam in. Leo in vitae turpis massa sed. Pharetra magna ac placerat vestibulum lectus mauris ultrices eros. Felis donec et odio pellentesque diam volutpat commodo sed egestas. Gravida rutrum quisque non tellus orci ac auctor
-            augue mauris. Eu consequat ac felis donec et odio pellentesque diam. Auctor augue mauris augue neque gravida in fermentum et sollicitudin.
+          <div class="row g-color-white">
+            <div class="col-md-4">
+              <ul>
+                <h3 class="g-color-white">
+                  <strong>Technical Skills</strong>
+                </h3>
+                <li>
+                  Minimum 3.0 GPA
+                </li>
+                <li>
+                  Majoring in Computer Science, Computer Engineering, or related field
+                </li>
+                <li>
+                  Experience with object oriented software development
+                </li>
+                <li>
+                  Desire to apply and develop technical skills
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <ul>
+                <h3 class="g-color-white">
+                  <strong>Collaborative Skills</strong>
+                </h3>
+                <li>
+                  Works well in team environment
+                </li>
+                <li>
+                  Strong written and communication skills
+                </li>
+                <li>
+                  Desire to apply and develop interpersonal skills
+                </li>
+                <li>
+                  Likes to have fun
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4" style="margin-bottom:100px;">
+              <h3 class="g-color-white">
+                <strong>Other Requirements</strong>
+              </h3>
+              <li>
+                U.S. Citizen
+              </li>
+              <li>
+                Ability to obtain a security clearance
+              </li>
+              <li>
+                Desire to work in the Northern Virginia area
+              </li>
+              <li>
+                Currently in Junior year
+              </li>
+            </div>
           </div>
         </div>
       </section>
