3-awards-section-shift: award section reviewed and finalized

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
               </div>
 
             </div>
-          </div> <br/> <br/> <br/> </div>
+          </div> <br/> <br/> </div>
       </section>
       <!-- End Awards Section -->
       <!-- Events Section Content -->
