34-testimonials-layout: Order the image correctly in moible view

--- a/intern.html
+++ b/intern.html
@@ -259,24 +259,37 @@
             </div>
           </div> <br/> <br/> <br/> <br/> <br/> </section>
       <section id="Testimonial" class="testimonial">
-        <div class="container-fluid">
-          <div class="g-pt-100 g-pb-30">
-            <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
-              <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-                <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Testimonials</h2> </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-sm-6">
-                <img src="./assets/custom/img/temp_internship/long_head.jpg" />
+        <div class="g-pt-100 g-pb-30">
+          <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
+            <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Testimonials</h2> </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2" style="text-align:center">
+                <img src="./assets/custom/img/temp_internship/long_head.jpg" class="rounded-circle potrait" />
               </div>
-              <div class="col-sm-5">
+              <div class="col-md-10">
                 <p class="g-color-white">
-                  This company made me this smart
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
               </div>
             </div>
+            <div class="row" style="margin-top:30px;">
+              <div class="col-md-10 order-md-1 order-2">
+                <p class="g-color-white">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+              <div class="col-md-2 order-md-2" style="text-align:center">
+                <img src="./assets/custom/img/temp_internship/long_neck.jpg" class="rounded-circle potrait" style="text-align:center" />
+              </div>
+            </div>
           </div>
-        </div> <br/> <br/> <br/> <br/> <br/> </section>
+        </div>
+        </div> <br/> <br/> <br/> </section>
       <!-- End Section Content -->
       <!-- Section Content -->
       <section id="contact" class="container-fluid g-color-white">
