--- a/intern.html
+++ b/intern.html
@@ -42,7 +42,7 @@
       <header id="js-header" class="u-header u-header--sticky-top u-header--change-appearance g-z-index-9999" data-header-fix-moment="100">
         <div class="u-header__section g-bg-white g-transition-0_3 g-py-6 g-py-18--md" data-header-fix-moment-exclude="g-py-18--md" data-header-fix-moment-classes="u-shadow-v18 g-py-13--md">
           <nav class="navbar navbar-expand-lg g-py-0">
-            <div class="container g-pos-rel">
+            <div class="container-fluid g-pos-rel">
               <!-- Logo --><a href="./index.html" class="navbar-brand u-header__logo" data-type="static">
                 <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="./assets/custom/img/case/logo-banner.gif" alt="Case Consulting">
               </a>
