--- a/index.html
+++ b/index.html
@@ -525,19 +525,19 @@
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Events</h2> </div>
         </div>
         <div class="card-deck g-mx-20 g-my-20">
-          <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017holiday_min.jpg" alt="2017 Holiday Party">
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017holiday_min.jpg" alt="2017 Holiday Party">
             <div class="card-body">
               <h4 class="card-title"><a href="https://photos.app.goo.gl/2U6zL2tz3Lou17ca2" target="_blank" rel="noopener">2017 Holiday Party</a></h4>
               <p class="card-text">Employees and loved ones enjoyed a night of bocce, bowling, food, and drinks at Pinstripes in Georgetown.</p>
             </div>
           </div>
-          <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017reinvent_min.jpg" alt="2017 AWS re:Invent">
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017reinvent_min.jpg" alt="2017 AWS re:Invent">
             <div class="card-body">
               <h4 class="card-title"><a href="https://photos.app.goo.gl/wg2bTokQI4RkM3WA3" target="_blank" rel="noopener">2017 AWS re:Invent</a></h4>
               <p class="card-text">This year we had a record number of employees go to AWS re:Invent in Las Vegas!</p>
             </div>
           </div>
-          <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017picnic_min.jpg" alt="2017 Family Picnic">
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017picnic_min.jpg" alt="2017 Family Picnic">
             <div class="card-body">
               <h4 class="card-title"><a href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></h4>
               <p class="card-text">We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!</p>
@@ -547,20 +547,20 @@
 
         <div class="collapse" id="collapseEvents">
           <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></h4>
                 <p class="card-text">Several employees attended the Virginia Tech Computer Science Resources Consortium Career Fair in search of another group of interns for the Summer of 2018!</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017-summer-internship-min.jpg" alt="2017 Summer Internship">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017-summer-internship-min.jpg" alt="2017 Summer Internship">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank" rel="noopener">2017 Summer Internship</a></h4>
                 <p class="card-text">Big changes for Case Consulting in 2017 as we moved to new offices and embarked on our inaugural Summer Internship program!</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017bptw-min.jpg" alt="2017 Best Places to Work">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017bptw-min.jpg" alt="2017 Best Places to Work">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank" rel="noopener">2017 Best Places to Work</a></h4>
                 <p class="card-text">Several of our employees attended the Washington Business Journal's 2017 Best Places to Work ceremony in Washington D.C. </p>
@@ -568,20 +568,20 @@
             </div>
           </div>
           <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
                 <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
                 </p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017serverless-min.jpg" alt="2017 Serverless Conference">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017serverless-min.jpg" alt="2017 Serverless Conference">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></h4>
                 <p class="card-text">Two of our employees learned a lot while taking in some of the sights at Serverless Conf in Austin, Texas!</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-holiday-party-min.jpg" alt="2016 Holiday Party">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/case-holiday-party-min.jpg" alt="2016 Holiday Party">
               <div class="card-body">
                 <h4 class="card-title"> <a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></h4>
                 <p class="card-text">Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
@@ -590,19 +590,19 @@
           </div>
           <div class="card-deck g-mx-20 g-my-20">
 
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-family-picnic-min.jpg" alt="2016 Family Picnic">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/case-family-picnic-min.jpg" alt="2016 Family Picnic">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank" rel="noopener">2016 Family Picnic</a></h4>
                 <p class="card-text">Our annual Summer picnic is always a blast for employees and their families and this year was no different. The kids (and some adults) enjoyed the inflatable obstacle course and face painting.</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/aws-trip-min.jpg" alt="re:Invent 2016">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/aws-trip-min.jpg" alt="re:Invent 2016">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank" rel="noopener">re:Invent 2016</a></h4>
                 <p class="card-text">Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
               </div>
             </div>
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
+            <div class="card"> <img class=" event-images" src="./assets/custom/img/events/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></h4>
                 <p class="card-text">The force is strong with us as we watched Rogue One at the Alamo Drafthouse.</p>
@@ -613,13 +613,13 @@
           <div class="card-deck justify-content-center g-mx-20 g-my-20">
 
             <!-- Item -->
-            <div class="card mw-30"> <img class="card-img-top" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
+            <div class="card mw-30"> <img class=" event-images" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank" rel="noopener">2015 Holiday Party</a></h4>
                 <p class="card-text">Employees and their loved ones enjoyed a night out at Salamander Resort and Spa to celebrate the holiday season.</p>
               </div>
             </div>
-            <div class="card mw-30"> <img class="card-img-top" src="./assets/custom/img/events/starwars-trip-min.jpg" alt="Star Wars: The Force Awakens">
+            <div class="card mw-30"> <img class=" event-images" src="./assets/custom/img/events/starwars-trip-min.jpg" alt="Star Wars: The Force Awakens">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank" rel="noopener">Star Wars: The Force Awakens</a></h4>
                 <p class="card-text">Several employees viewed the latest Star Wars movie at the Udvar Hazy IMAX theater.</p>
