--- a/intern.html
+++ b/intern.html
@@ -149,65 +149,67 @@
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
               <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white ">Requirements</h2> </div>
           </div>
-          <div class="row g-color-white">
-            <div class="col-md-4">
-              <ul>
-                <h3 class="g-color-white">
+          <div class="container">
+            <div class="row g-color-white">
+              <div class="col-md-4">
+                <ul>
+                  <h3 class="g-color-white">
                   <strong>Technical Skills</strong>
                 </h3>
-                <li>
-                  Minimum 3.0 GPA
-                </li>
-                <li>
-                  Majoring in Computer Science, Computer Engineering, or related field
-                </li>
-                <li>
-                  Experience with object oriented software development
-                </li>
-                <li>
-                  Desire to apply and develop technical skills
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <ul>
-                <h3 class="g-color-white">
+                  <li>
+                    Minimum 3.0 GPA
+                  </li>
+                  <li>
+                    Majoring in Computer Science, Computer Engineering, or related field
+                  </li>
+                  <li>
+                    Experience with object oriented software development
+                  </li>
+                  <li>
+                    Desire to apply and develop technical skills
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <h3 class="g-color-white">
                   <strong>Collaborative Skills</strong>
                 </h3>
-                <li>
-                  Works well in team environment
-                </li>
-                <li>
-                  Strong written and communication skills
-                </li>
-                <li>
-                  Desire to apply and develop interpersonal skills
-                </li>
-                <li>
-                  Likes to have fun
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-4" style="margin-bottom:100px;">
-              <ul>
+                  <li>
+                    Works well in team environment
+                  </li>
+                  <li>
+                    Strong written and communication skills
+                  </li>
+                  <li>
+                    Desire to apply and develop interpersonal skills
+                  </li>
+                  <li>
+                    Likes to have fun
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-4" style="margin-bottom:100px;">
+                <ul>
 
 
-                <h3 class="g-color-white">
+                  <h3 class="g-color-white">
                 <strong>Other Requirements</strong>
               </h3>
-                <li>
-                  U.S. Citizen
-                </li>
-                <li>
-                  Ability to obtain a security clearance
-                </li>
-                <li>
-                  Desire to work in the Northern Virginia area
-                </li>
-                <li>
-                  Currently in Junior year
-                </li>
-              </ul>
+                  <li>
+                    U.S. Citizen
+                  </li>
+                  <li>
+                    Ability to obtain a security clearance
+                  </li>
+                  <li>
+                    Desire to work in the Northern Virginia area
+                  </li>
+                  <li>
+                    Currently in Junior year
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
