36-break-out-internship: broke out the internship

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
                     <a href="#benefits" class="nav-link p-0">Benefits</a> </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#careers" class="nav-link p-0">Careers</a> </li>
+                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#intern" class="nav-link p-0">Internship</a> </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
                     <a href="#numbers" class="nav-link p-0">Numbers</a> </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#awards" class="nav-link p-0">Awards</a> </li>
@@ -165,7 +166,6 @@
           <!-- End Info Blocks -->
         </div>
       </section>
-      </div>
       <!-- Benefits Section Content -->
       <section id="benefits" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
@@ -328,7 +328,6 @@
               <li class="nav-item"> <a class="nav-link" id="system-integrator-tab" data-toggle="tab" href="#system-integrator" role="tab" aria-controls="contact" aria-selected="false">System Integrator</a> </li>
               <li class="nav-item"> <a class="nav-link" id="developer-tab" data-toggle="tab" href="#developer" role="tab" aria-controls="contact" aria-selected="false">Developer</a> </li>
               <li class="nav-item"> <a class="nav-link" id="system-administrator-tab" data-toggle="tab" href="#system-administrator" role="tab" aria-controls="contact" aria-selected="false">System Administrator</a> </li>
-              <li class="nav-item"> <a class="nav-link" id="internship-tab" data-toggle="tab" href="#internship" role="tab" aria-controls="contact" aria-selected="false">Internship</a> </li>
             </ul>
             <div class="tab-content" id="myTabContent">
               <div class="tab-pane fade show active" id="project-manager" role="tabpanel" aria-labelledby="home-tab">
@@ -442,6 +441,37 @@
         </div>
       </section>
       <!-- End Section Content -->
+
+      <!-- Internship Section Content -->
+      <section id="intern" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
+        <div class="container-fluid">
+          <div class="container text-center g-max-width-750 g-mb-20 g-pt-70">
+            <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Internship</h2> </div>
+          </div>
+          <div class="container g-pb-30">
+            <row>
+              <div class="col-md-8 offset-md-2">
+                <h3 class="text-uppercase g-color-white">
+                      <strong>Internship</strong>
+                    </h3> </div>
+            </row>
+            <row>
+              <div class="col-md-8 offset-md-2">
+                <p class="g-color-white"> Summer Internships take place from May to August in the Make Offices in Reston, Virginia, within the metropolitan area of Washington, D.C. The interns will design and implement software applications as part of a collaborative team of interns
+                  and professional software developers. The intern will gain experience in full stack development using modern web technologies, including Amazon Web Services (AWS). Interns will also learn best practices in version control systems using
+                  GitHub, and will incorporate Agile methodologies for self-organization and regular delivery of code for production. The intern will develop communication skills with customers to produce useful software for the client.
+                </p>
+              </div>
+            </row>
+            <row>
+              <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button" style="color:black">Learn More</a> </div>
+            </row>
+          </div>
+        </div>
+      </section>
+      <!-- End Section Content -->
+
       <!-- Numbers Section Content -->
       <section id="numbers">
         <div class="container-fluid">
