36-break-out-internship: dro shadow everywhere

--- a/index.html
+++ b/index.html
@@ -450,22 +450,19 @@
               <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Internship</h2> </div>
           </div>
           <div class="container g-pb-30">
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
             <row>
-              <div class="col-md-8 offset-md-2">
-                <h3 class="text-uppercase g-color-white g-mb-30">
-                      <strong>Internship</strong>
-                    </h3> </div>
-            </row>
-            <row>
-              <div class="col-md-8 offset-md-2">
-                <p class="g-color-white"> Summer Internships take place from May to August in the Make Offices in Reston, Virginia, within the metropolitan area of Washington, D.C. The interns will design and implement software applications as part of a collaborative team of interns
-                  and professional software developers. The intern will gain experience in full stack development using modern web technologies, including Amazon Web Services (AWS). Interns will also learn best practices in version control systems using
-                  GitHub, and will incorporate Agile methodologies for self-organization and regular delivery of code for production. The intern will develop communication skills with customers to produce useful software for the client.
-                </p>
+              <div class="text-center">
+                <a href="./intern.html" type="button" class="btn button_clear" role="button"> Learn More </a>
               </div>
-            </row>
-            <row>
-              <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button" style="color:black">Learn More</a> </div>
             </row>
           </div>
         </div>
