--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       <!-- End Section Content -->
 
       <!-- Internship Section Content -->
-      <section id="intern" class="g-theme-bg-color-1 g-text-color-2 no-column-space intern-background">
+      <section id="intern" class="g-text-color-2 no-column-space intern-background">
         <div class="container-fluid">
           <div class="container text-center g-max-width-750 g-mb-20 g-pt-70">
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
