readded revolution slider by copying the code from github

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/custom/img/case/navLogo.png">
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik" type='text/css'>
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="./assets/vendor/bootstrap/bootstrap.min.css">
     <!--<link rel="stylesheet"
@@ -110,14 +110,12 @@
               <div id="promoSliderLayer7" class="tp-caption NotGeneric-CallToAction rev-btn rs-parallaxlevel-0" style="z-index: 9; font-weight: bold; white-space: nowrap; outline: none; box-shadow: none; box-sizing: border-box; text-transform: uppercase; border-width: 2px;"
                 data-x="['center','center','center','center']" data-y="['middle','middle','middle','middle']" data-hoffset="['0','0','0','0']" data-voffset="['134','134','80','65']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;"
                 data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power1.easeInOut;" data-style_hover="c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);cursor:pointer;" data-transform_in="y:50px;opacity:0;s:1500;e:Power4.easeInOut;" data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1250" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"0px"}]' data-responsive_offset="on" data-responsive="off">Learn More </div>
+                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1250" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"-90px"}]' data-responsive_offset="on" data-responsive="off">Learn More </div>
             </li>
           </ul>
           <div class="tp-static-layers"></div>
           <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
         </div>
-
-
       </section>
       <!-- END REVOLUTION SLIDER -->
       <!-- End Section Content -->
@@ -707,7 +705,7 @@
       </a> </main>
     <!-- JS Global Compulsory -->
     <script src="./assets/vendor/jquery/jquery.min.js "></script>
-
+    <script src="./assets/vendor/jquery-migrate/jquery-migrate.min.js "></script>
     <script src="./assets/vendor/popper.js/popper.min.js "></script>
     <script src="./assets/vendor/bootstrap/bootstrap.min.js "></script>
     <!-- JS Implementing Plugins -->
@@ -716,17 +714,16 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf66JJmp2VOldGTrVNOmMumlB5U6sVBSI&callback=initMap " async defer></script>
     <script src="./assets/custom/js/plugins/gmaps-ini.js "></script>
     <!-- JS Revolution Slider -->
-    <!--
     <script src="./assets/vendor/revolution-slider/revolution/js/jquery.themepunch.tools.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js "></script>
     <script src='./assets/vendor/revolution-slider/revolution-addons/slicey/js/revolution.addon.slicey.min.js'></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js "></script>
-    <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js "></script>
+    <!--<script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js "></script>-->
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js "></script>
-    <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js "></script>-->
+    <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js "></script>
     <!-- Charts.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js "></script>
     <script src="./assets/custom/js/plugins/charts.js "></script>
